--- a/html/page_1.html
+++ b/html/page_1.html
@@ -24,11 +24,17 @@
                 <a href="/html/page_3.html"><img class="logo" src="../medias/tzeentch.png"> Kislev</a>
             </nav>
         </div>
+        <ul id="sommaire">
+            <li><a href="#img1">Forces du Bien</a></li>
+            <li><a href="#img2">Forces du Mal</a></li>
+            <li><a href="#table">Récapitulatif</a></li>
+        </ul>
     </header>
     <img id="presentation" src="../medias/400px-Pelennor.jpg">
+    
     <main>
 
-        <div class="imgT">
+        <div class="imgT" id="img1">
             <h2>Forces du bien</h2>
             <img src="../medias/soldat-gondor.jpg"></a>
             <h2>Spécificités :</h2>
@@ -40,7 +46,7 @@
                 Tirith. Les Cavaliers de Rohan, dirigés par le roi Théoden et son fidèle lieutenant Éomer, apportent une
                 puissante cavalerie pour renforcer la défense de la cité.</p>
         </div>
-        <div class="imgT">
+        <div class="imgT" id="img2">
             <h2>Forces du mal</h2>
             <img src="../medias/orcs.png"></a>
             <h2>Spécificités :</h2>
@@ -52,7 +58,7 @@
             <p> Sauron a également rallié à sa cause des hommes de l'Est et du Sud, connus sous le nom de Haradrim et
                 d'Orientaux. Ils apportent des éléphants de guerre</p>
         </div>
-        <div class="tableau" border-collapse:collapse>
+        <div class="tableau"id="table" border-collapse:collapse>
             <table>
                 <tr>
                     <td colspan="2">
