--- a/html/page_3.html
+++ b/html/page_3.html
@@ -24,6 +24,11 @@
                 <a href="/html/page_3.html"><img class="logo" src="../medias/tzeentch.png"> Kislev</a>
             </nav>
         </div>
+        <ul id="sommaire">
+            <li><a href="#img1">Forces du Bien</a></li>
+            <li><a href="#img2">Forces du Mal</a></li>
+            <li><a href="#table">Récapitulatif</a></li>
+        </ul>
     </header>
     <img id="presentation" src="../medias/City-of-kislev.jpg">
     <main>
